--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.13",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -40,6 +41,7 @@
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
